--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "grunt": "~0.4.1"
   },
   "peerDependencies": {
-    "grunt": "~0.4.1"
+    "grunt": ">= 3.0"
   },
   "keywords": [
     "gruntplugin"
