--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-downloadfile",
-  "description": "The best Grunt plugin ever.",
-  "version": "2.0.0",
+  "description": "Download files via Grunt",
+  "version": "2.1.0",
   "homepage": "https://github.com/mCzolko/grunt-downloadfile",
   "author": {
     "name": "Michael Czolko",
